// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: Initial 1`] = `
{
  "haspopup": "menu",
  "name": "Some more detailed label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree if accessibility properties are set: Pressed 1`] = `
{
  "name": "More Information",
  "pressed": true,
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree when aria property is changed 1`] = `
{
  "name": "Some more detailed label",
  "role": "button",
}
`;

exports[`accessibility should expose correct accessibility tree when popover is opened 1`] = `
{
  "focused": true,
  "name": "More information",
  "role": "button",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
{
  "name": "More information",
  "role": "button",
}
`;
